--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </header>
 
   <main>
+    <image>433383186_391725200281357_2217049787415416924_n.jpg</image>
     <!-- Placeholder: Add a general description and request for content from collaborators -->
     <section>
       <h2>Welcome to the Kirksville Ukulele Club!</h2>
